--- a/styles/app/app.css
+++ b/styles/app/app.css
@@ -4,6 +4,8 @@ body {
   width: 100%;
   margin: 0;
   font-family: "Open Sans", sans-serif;
+  -ms-scroll-chaining: none;
+      overscroll-behavior: none;
 }
 
 a {
@@ -18,11 +20,12 @@ a {
 }
 
 .home-navbar {
+  color: black;
   display: flex;
-  border: 1px solid orange;
   justify-content: space-between;
   align-items: center;
   grid-area: 1/1/1/4;
+  font-size: 12px;
 }
 .home-navbar .hn-left {
   display: flex;
@@ -31,10 +34,12 @@ a {
   align-items: center;
 }
 .home-navbar .hn-left .hestia a {
-  color: red;
+  color: #555;
+  font-size: 18px;
 }
 .home-navbar .hn-left .hestia a:hover {
-  background: brown;
+  color: #959595;
+  transition: ease 0.5em;
 }
 .home-navbar .hn-right {
   display: flex;
@@ -42,17 +47,41 @@ a {
   justify-content: center;
   align-items: center;
 }
-.home-navbar .hn-right .hn-right-item {
+.home-navbar .hn-right .hn-right-item a {
   padding: 10px 20px;
 }
+.home-navbar .hn-right .hn-right-item a:hover {
+  color: #e91e63;
+}
 .home-navbar .hn-right button.more {
+  font-size: 12px;
+  color: white;
+  border: transparent;
   background-color: #e91e63;
+  padding: 18px 25px;
+  border-radius: 25px;
+}
+.home-navbar .hn-right button.more:hover {
+  filter: blur(1px);
+  transition: ease-in;
 }
 
 .welcome-wrapper {
+  background-image: url("/images/mnts.jpeg");
+  background-size: cover;
+  background-position: 25% 60%;
   display: flex;
-  border: 1px solid purple;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   grid-area: 2/1/2/4;
+}
+.welcome-wrapper .welcome-header {
+  color: white;
+}
+.welcome-wrapper button.wel-button {
+  padding: 50px;
+  background-color: #e91e63;
 }
 
 .we-stand-wrapper {
