--- a/styles/home-wrapper/home-wrapper.css
+++ b/styles/home-wrapper/home-wrapper.css
@@ -4,6 +4,8 @@ body {
   width: 100%;
   margin: 0;
   font-family: "Open Sans", sans-serif;
+  -ms-scroll-chaining: none;
+      overscroll-behavior: none;
 }
 
 a {
@@ -14,5 +16,6 @@ a {
 .home-wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 85px 450px 500px 450px 450px 450px 100px;
+  grid-template-rows: 0.75fr 6fr;
+  height: 100%;
 }/*# sourceMappingURL=home-wrapper.css.map */
