--- a/styles/we-stand-wrapper/we-stand.scss
+++ b/styles/we-stand-wrapper/we-stand.scss
@@ -1,5 +1,12 @@
-.we-stand-wrapper {
+.floating-body {
   display: flex;
-  border: 2px dashed green;
-  grid-area: 3/1/3/4;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  background-color: white;
+  // grid-area: 3/1/3/4;
+  border: 1px solid white;
+  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.4);
+  margin: -70px 15px 0px 15px;
 }
