--- a/styles/welcome-wrapper/welcome.scss
+++ b/styles/welcome-wrapper/welcome.scss
@@ -1,5 +1,24 @@
-.welcome-wrapper {
-  display: flex;
-  border: 1px solid purple;
-  grid-area: 2/1/2/4;
+@import "../variables/variables.scss";
+
+.home-wrapper {
+  .welcome-wrapper {
+    background-image: url("/images/mnts.jpeg");
+    background-size: cover;
+    background-position: 25% 60%;
+    width: 100%;
+    // height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    grid-area: 2/1/2/4;
+
+    .welcome-header {
+      color: white;
+      text-align: center;
+      font-size: 60px;
+      font-weight: 900;
+      margin-bottom: 50px;
+    }
+  }
 }
