added we-stand section styles

--- a/styles/home-navbar/navbar.css
+++ b/styles/home-navbar/navbar.css
@@ -43,4 +43,5 @@
 .home-navbar .hn-right button.more:hover {
   filter: blur(1px);
   transition: ease-in;
+  cursor: pointer;
 }/*# sourceMappingURL=navbar.css.map */
