--- a/styles/floating-body-wrapper/floating-body.scss
+++ b/styles/floating-body-wrapper/floating-body.scss
@@ -1,10 +1,12 @@
 .floating-body {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   position: relative;
   background-color: white;
+  // grid-area: 3/1/3/4;
   border: 1px solid white;
-  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.4);
-  margin: -70px 15px 0px 15px;
-}/*# sourceMappingURL=floating-body.css.map */
+  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.6);
+  margin: -100px 25px 0px 25px;
+}
