--- a/styles/we-stand-wrapper/we-stand.css
+++ b/styles/we-stand-wrapper/we-stand.css
@@ -1,11 +1,48 @@
-.floating-body {
+.we-stand-wrapper {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
-  position: relative;
-  background-color: white;
-  border: 1px solid white;
-  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.4);
-  margin: -70px 15px 0px 15px;
+  width: 100%;
+}
+.we-stand-wrapper .we-stand-header {
+  font-family: "Roboto", sans-serif;
+  margin-top: 20px;
+  font-weight: 700;
+  font-size: larger;
+}
+.we-stand-wrapper .we-stand-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 0 100px 0;
+}
+.we-stand-wrapper .block-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
+.we-stand-wrapper .block-wrapper .cube {
+  color: #e91e63;
+  font-size: 50px;
+}
+.we-stand-wrapper .block-wrapper .square {
+  color: lightblue;
+  font-size: 50px;
+}
+.we-stand-wrapper .block-wrapper .lines {
+  color: green;
+  font-size: 50px;
+}
+.we-stand-wrapper .block-wrapper .section-title {
+  font-family: "Roboto Slab", "Times New Roman", serif;
+  color: #000;
+  margin: 20px 10px;
+  font-weight: 550;
+  font-size: 20px;
+}
+.we-stand-wrapper .block-wrapper .section-words {
+  color: #999;
+  font-size: 14px;
 }/*# sourceMappingURL=we-stand.css.map */
