--- a/styles/welcome-wrapper/welcome.scss
+++ b/styles/welcome-wrapper/welcome.scss
@@ -4,9 +4,8 @@
   .welcome-wrapper {
     background-image: url("/images/mnts.jpeg");
     background-size: cover;
-    background-position: 25% 60%;
+    background-position: 25% 90%;
     width: 100%;
-    // height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,11 +13,33 @@
     grid-area: 2/1/2/4;
 
     .welcome-header {
+      font-family: "Roboto", sans-serif;
       color: white;
       text-align: center;
-      font-size: 60px;
+      font-size: 67px;
       font-weight: 900;
-      margin-bottom: 50px;
+    }
+
+    .welcome-title {
+      color: white;
+      font-size: 18px;
+      font-weight: 500;
+      margin-top: 25px;
+      margin-bottom: 65px;
+    }
+
+    .welcome-button {
+      background-color: $hestia-pink;
+      color: $hestia-white;
+      font-size: 12px;
+      font-weight: 400;
+      padding: 15px 33px;
+      border: none;
+      border-radius: 5px;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 }
