--- a/styles/about-hestia-wrapper/about.scss
+++ b/styles/about-hestia-wrapper/about.scss
@@ -1,5 +1,34 @@
+@import "../variables/variables.scss";
+
 .about-hestia-wrapper {
   display: flex;
-  border: 1px dashed orange;
-  grid-area: 4/1/4/4;
+  width: 100.1%;
+  background-image: url("https://wp-themes.com/wp-content/themes/hestia/assets/img/contact.jpg");
+  background-size: cover;
+  background-position: 25% 50%;
+  color: white;
+  justify-content: space-between;
+
+  .ab-hes-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+    .ab-title {
+      font-size: xx-large;
+      padding-right: 27%;
+      font-weight: 400;
+      padding-bottom: 1.5%;
+      font-family: "Roboto Slab", serif;
+    }
+  }
+
+  .ab-hes-right {
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    padding: 3%;
+  }
 }
