--- a/styles/floating-body-wrapper/floating-body.css
+++ b/styles/floating-body-wrapper/floating-body.css
@@ -6,6 +6,7 @@
   position: relative;
   background-color: white;
   border: 1px solid white;
+  border-radius: 5px;
   box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.6);
   margin: -100px 25px 0px 25px;
 }/*# sourceMappingURL=floating-body.css.map */
