--- a/styles/floating-body-wrapper/floating-body.scss
+++ b/styles/floating-body-wrapper/floating-body.scss
@@ -5,8 +5,8 @@
   align-items: center;
   position: relative;
   background-color: white;
-  // grid-area: 3/1/3/4;
   border: 1px solid white;
+  border-radius: 5px;
   box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.6);
   margin: -100px 25px 0px 25px;
 }
