--- a/styles/get-in-touch-wrapper/get-in-touch.scss
+++ b/styles/get-in-touch-wrapper/get-in-touch.scss
@@ -1,5 +1,45 @@
+@import "../variables/variables.scss";
+
 .get-in-touch {
   display: flex;
-  border: 1px solid blue;
-  grid-area: 6/1/6/4;
+  width: 100.1%;
+  background-image: url("https://wp-themes.com/wp-content/themes/hestia/assets/img/contact.jpg");
+  background-size: cover;
+  background-position: 25% 50%;
+  color: white;
+  justify-content: space-between;
+
+  .touch-left {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    padding: 6% 0 5% 18%;
+
+    .touch-title {
+      font-family: "Roboto Slab", serif;
+      font-size: 40px;
+      padding-bottom: 5%;
+    }
+
+    .touch-content {
+      display: flex;
+      flex-direction: column;
+
+      .touch-icon {
+        font-family: "Roboto Slab", serif;
+        font-size: large;
+        padding-bottom: 2%;
+
+        .fas {
+          font-size: 35px;
+          padding-right: 0.75%;
+        }
+      }
+
+      .touch-detail {
+        font-size: small;
+        padding-left: 4%;
+      }
+    }
+  }
 }
