--- a/styles/home-navbar/navbar.scss
+++ b/styles/home-navbar/navbar.scss
@@ -7,15 +7,7 @@
   align-items: center;
   grid-area: 1/1/1/4;
   font-size: 12px;
-
-  // &::before {
-  //   background-color: transparent;
-  //   color: $hestia-white;
-  // }
-
-  // &::after {
-  //   background-color: $hestia-white;
-  // }
+  background-color: $hestia-white;
 
   .hn-left {
     display: flex;
