--- a/styles/home-wrapper/home-wrapper.css
+++ b/styles/home-wrapper/home-wrapper.css
@@ -6,6 +6,7 @@ body {
   font-family: "Open Sans", sans-serif;
   -ms-scroll-chaining: none;
       overscroll-behavior: none;
+  background-color: #e5e5e5;
 }
 
 a {
