--- a/styles/we-stand-wrapper/we-stand.css
+++ b/styles/we-stand-wrapper/we-stand.css
@@ -23,26 +23,15 @@
   align-items: center;
   margin: 10px;
 }
-.we-stand-wrapper .block-wrapper .cube {
-  color: #e91e63;
-  font-size: 50px;
-}
-.we-stand-wrapper .block-wrapper .square {
-  color: lightblue;
-  font-size: 50px;
-}
-.we-stand-wrapper .block-wrapper .lines {
-  color: green;
-  font-size: 50px;
-}
 .we-stand-wrapper .block-wrapper .section-title {
   font-family: "Roboto Slab", "Times New Roman", serif;
   color: #000;
   margin: 20px 10px;
-  font-weight: 550;
-  font-size: 20px;
+  font-weight: 600;
+  font-size: 18px;
 }
 .we-stand-wrapper .block-wrapper .section-words {
   color: #999;
   font-size: 14px;
+  text-align: center;
 }/*# sourceMappingURL=we-stand.css.map */
