added blog page and styles

--- a/styles/about-hestia-wrapper/about.css
+++ b/styles/about-hestia-wrapper/about.css
@@ -22,8 +22,25 @@
   font-family: "Roboto Slab", serif;
 }
 .about-hestia-wrapper .ab-hes-right {
+  display: flex;
   height: 100%;
   width: 100%;
   justify-content: center;
   padding: 3%;
+}
+
+@media (max-width: 950px) {
+  .about-hestia-wrapper {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .about-hestia-wrapper .ab-hes-right {
+    align-items: flex-start;
+    height: 50%;
+    width: 50%;
+  }
+  .about-hestia-wrapper .ab-hes-right .about-images {
+    align-items: center;
+  }
 }/*# sourceMappingURL=about.css.map */
