--- a/styles/app/app.scss
+++ b/styles/app/app.scss
@@ -7,3 +7,5 @@
 @import "../blog-wrapper/blog.scss";
 @import "../get-in-touch-wrapper/get-in-touch.scss";
 @import "../home-footer/home-footer.scss";
+@import "../blog-page-body/bp-body.scss";
+@import "../blog-page-welcome-wrapper/bp-welcome-wrapper.scss";
