--- a/styles/we-stand-wrapper/we-stand.css
+++ b/styles/we-stand-wrapper/we-stand.css
@@ -34,4 +34,14 @@
   color: #999;
   font-size: 14px;
   text-align: center;
+}
+
+@media (max-width: 950px) {
+  .we-stand-info {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
 }/*# sourceMappingURL=we-stand.css.map */
