--- a/styles/we-stand-wrapper/we-stand.scss
+++ b/styles/we-stand-wrapper/we-stand.scss
@@ -42,3 +42,17 @@
     }
   }
 }
+
+@media (max-width: 950px) {
+  .we-stand-info {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    // .blog-block {
+
+    // }
+  }
+}
