--- a/styles/variables/variables.scss
+++ b/styles/variables/variables.scss
@@ -3,3 +3,5 @@ $hestia-grey: #555;
 $hestia-black: #000;
 $hestia-white: #fff;
 $footer-color: #323437;
+$hestia-light: #999;
+$hestia-header: "Roboto Slab", "Times New Roman", serif;
