--- a/styles/app/app.scss
+++ b/styles/app/app.scss
@@ -9,3 +9,4 @@
 @import "../home-footer/home-footer.scss";
 @import "../blog-page-body/bp-body.scss";
 @import "../blog-page-welcome-wrapper/bp-welcome-wrapper.scss";
+@import "../contact-page/contact.scss";
