--- a/styles/home-navbar/navbar.css
+++ b/styles/home-navbar/navbar.css
@@ -6,6 +6,7 @@
   grid-area: 1/1/1/4;
   font-size: 12px;
   background-color: #fff;
+  padding: 0.5% 0;
 }
 .home-navbar .hn-left {
   display: flex;
