--- a/styles/home-navbar/navbar.scss
+++ b/styles/home-navbar/navbar.scss
@@ -1,6 +1,11 @@
 @import "../variables/variables.scss";
 
 .home-navbar {
+  // position: fixed;
+  // top: 0;
+  // width: 100%;
+  // height: 50px;
+  // z-index: 3;
   color: black;
   display: flex;
   justify-content: space-between;
@@ -8,6 +13,7 @@
   grid-area: 1/1/1/4;
   font-size: 12px;
   background-color: $hestia-white;
+  padding: 0.5% 0;
 
   .hn-left {
     display: flex;
