--- a/styles/home-navbar/navbar.scss
+++ b/styles/home-navbar/navbar.scss
@@ -1,11 +1,11 @@
 @import "../variables/variables.scss";
 
 .home-navbar {
-  // position: fixed;
-  // top: 0;
-  // width: 100%;
-  // height: 50px;
-  // z-index: 3;
+  position: fixed;
+  top: 0;
+  width: 110%;
+  height: 50px;
+  z-index: 3;
   color: black;
   display: flex;
   justify-content: space-between;
@@ -38,6 +38,10 @@
     justify-content: center;
     align-items: center;
 
+    .nav-icon {
+      display: none;
+    }
+
     .hn-right-item a {
       padding: 10px 20px;
 
@@ -45,10 +49,9 @@
         color: $hestia-pink;
       }
     }
-
-    button.more {
+    .more a {
       font-size: 12px;
-      color: white;
+      color: $hestia-white;
       border: transparent;
       background-color: $hestia-pink;
       padding: 18px 25px;
@@ -63,15 +66,33 @@
   }
 }
 
-@media (max-width: 950px) {
+@media (max-width: 750px) {
   .home-navbar {
     .hn-left {
       justify-content: flex-start;
-      padding-left: 2%;
+      padding-left: 10%;
     }
 
     .hn-right {
-      justify-content: flex-start;
+      justify-content: flex-end;
+      padding-right: 5vw;
+
+      .hn-right-item {
+        display: none;
+        justify-content: center;
+      }
+      .nav-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 25px;
+        color: $hestia-light;
+        padding-right: 7vw;
+
+        &:hover {
+          color: $hestia-pink;
+        }
+      }
     }
   }
 }
